升级到2.2.4： 1. 优化卡片组件card的接收拖拽区域大小； 2. 修复type属性编辑器配置错误的问题。

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,6 +54,11 @@ $--color-primary: #409EFF;
   }
 }
 
+.el-card {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
 input[type="password"]::-ms-reveal {  /* 隐藏IE/Edge原生的密码查看按钮 */
   display: none;
 }
